src/test/ui/on-unimplemented/bad-annotation.stderr
error[E0232]: `#[rustc_on_unimplemented]` requires a value
  --> $DIR/bad-annotation.rs:26:1
   |
26 | #[rustc_on_unimplemented] //~ ERROR this attribute must have a value
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ value required here
   |
   = note: eg `#[rustc_on_unimplemented = "foo"]`

error[E0230]: there is no type parameter C on trait BadAnnotation2
  --> $DIR/bad-annotation.rs:30:1
   |
30 | #[rustc_on_unimplemented = "Unimplemented trait error on `{Self}` with params `<{A},{B},{C}>`"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0231]: only named substitution parameters are allowed
  --> $DIR/bad-annotation.rs:35:1
   |
35 | #[rustc_on_unimplemented = "Unimplemented trait error on `{Self}` with params `<{A},{B},{}>`"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0232]: this attribute must have a valid value
  --> $DIR/bad-annotation.rs:40:26
   |
40 | #[rustc_on_unimplemented(lorem="")]
   |                          ^^^^^^^^ expected value here
   |
   = note: eg `#[rustc_on_unimplemented = "foo"]`

error[E0232]: this attribute must have a valid value
  --> $DIR/bad-annotation.rs:43:26
   |
43 | #[rustc_on_unimplemented(lorem(ipsum(dolor)))]
   |                          ^^^^^^^^^^^^^^^^^^^ expected value here
   |
   = note: eg `#[rustc_on_unimplemented = "foo"]`

error[E0232]: this attribute must have a valid value
  --> $DIR/bad-annotation.rs:46:39
   |
46 | #[rustc_on_unimplemented(message="x", message="y")]
   |                                       ^^^^^^^^^^^ expected value here
   |
   = note: eg `#[rustc_on_unimplemented = "foo"]`

error[E0232]: this attribute must have a valid value
  --> $DIR/bad-annotation.rs:49:39
   |
49 | #[rustc_on_unimplemented(message="x", on(desugared, message="y"))]
   |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected value here
   |
   = note: eg `#[rustc_on_unimplemented = "foo"]`

error[E0232]: empty `on`-clause in `#[rustc_on_unimplemented]`
  --> $DIR/bad-annotation.rs:52:26
   |
52 | #[rustc_on_unimplemented(on(), message="y")]
   |                          ^^^^ empty on-clause here

error[E0232]: this attribute must have a valid value
  --> $DIR/bad-annotation.rs:55:26
   |
55 | #[rustc_on_unimplemented(on="x", message="y")]
   |                          ^^^^^^ expected value here
   |
   = note: eg `#[rustc_on_unimplemented = "foo"]`

error[E0232]: this attribute must have a valid value
  --> $DIR/bad-annotation.rs:61:40
   |
61 | #[rustc_on_unimplemented(on(desugared, on(desugared, message="x")), message="y")]
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected value here
   |
   = note: eg `#[rustc_on_unimplemented = "foo"]`

error: aborting due to 10 previous errors

